--- a/petljadoc/themes/course_theme/static/petlja.css
+++ b/petljadoc/themes/course_theme/static/petlja.css
@@ -3,6 +3,8 @@ html {
 	position: relative;
 	max-height: 100vh;
 	width: 100vw;
+	overflow:auto;
+	overflow-x: hidden;
 }
 
 .modal-body {
@@ -145,7 +147,7 @@ div.modal-header {
 
 div.sphinxsidebar {
 	float: left;
-	width: 100% !important;
+	width: 20% !important;
 	height: 100% !important;
 	margin-left: 0 !important;
 	font-size: 17px;
@@ -155,7 +157,7 @@ div.sphinxsidebar {
 	background-color: #1db386;
 	overflow: auto;
 	overflow-y: scroll;
-	position: relative;
+	position: fixed;
 	scroll-behavior: smooth;
 	color: white !important;
 	border: none;
@@ -258,8 +260,6 @@ ul:first-child {
 	width: 80vw !important;
 	max-width: none !important;
 	margin-top: 65px;
-	overflow: hidden;
-	overflow-y: scroll;
 }
 
 #main-content > div:nth-of-type(2) {
