--- a/petljadoc/runestone_ext/simanim/css/simanim.css
+++ b/petljadoc/runestone_ext/simanim/css/simanim.css
@@ -88,3 +88,31 @@
     border: 1px solid lightgray;
     margin-top: 10px;
 }
+
+
+@media only screen and (max-width: 795px) {
+    .sim-modal-variables {
+        float: none;
+        height: 50px;
+        border: 1px solid lightgray;
+        padding: 8px 10px;
+        margin-left: 0px; 
+        width: 100%;
+    }
+    .control-button-div {
+        width: 100%;
+        float: none;
+        border: 1px solid lightgray;
+        padding: 6px 10px;
+        height: 50px;
+        margin-bottom: 5px;
+        max-width: none;
+    }
+    .sim-controls {
+        height: max-content;
+        width: 100%;
+    }
+    .modal-content-sim{
+        min-width: 0;
+    }
+  }
