--- a/petljadoc/runestone_ext/simanim/css/simanim.css
+++ b/petljadoc/runestone_ext/simanim/css/simanim.css
@@ -56,7 +56,7 @@
     border: 1px solid rgba(0,0,0,.2);
     border-radius: .3rem;
     outline: 0;
-    width: max-content;
+    width: max-content !important;;
     min-width: 560px;
 }
 
