--- a/petljadoc/runestone_ext/pycode/css/pycode.css
+++ b/petljadoc/runestone_ext/pycode/css/pycode.css
@@ -130,3 +130,12 @@ body.modal-open {
 .modal-content-py{
     width: max-content !important;
 }
+
+
+@media only screen and (max-width: 900px) {
+    .btn-success {
+        width: 100%;
+        margin-bottom: 5px !important;
+        margin-right: 10px;
+    }
+}
