--- a/petljadoc/runestone_ext/simanim/css/simanim.css
+++ b/petljadoc/runestone_ext/simanim/css/simanim.css
@@ -115,4 +115,10 @@
     .modal-content-sim{
         min-width: 0;
     }
-  }
+    .modal-content-sim {
+        min-width: 370px !important;
+        max-width: none !important;
+        width: 0 !important;
+    }
+}
+  
