--- a/petljadoc/runestone_ext/pycode/css/pycode.css
+++ b/petljadoc/runestone_ext/pycode/css/pycode.css
@@ -3,6 +3,10 @@
     width: min-content;
 }
 
+.pycode{
+    display: flex;
+}
+
 .variable-label {
     margin-left: 10px;
 }
@@ -129,4 +133,13 @@ body.modal-open {
 }
 .modal-content-py{
     width: max-content !important;
+}
+
+
+@media only screen and (max-width: 900px) {
+    .btn-success {
+        width: 100%;
+        margin-bottom: 5px !important;
+        margin-right: 10px;
+    }
 }
