--- a/petljadoc/themes/course_theme/static/petlja-course.css
+++ b/petljadoc/themes/course_theme/static/petlja-course.css
@@ -269,6 +269,13 @@ ul:first-child {
 	margin:auto;
 }
 
+#main-content > section {
+	max-width: 780px;
+	height: max-content;
+	padding-bottom: 60px;
+	margin:auto;
+}
+
 .lecture-switcher {
 	width: 100%;
 	height: 50px;
