--- a/petljadoc/runestone_ext/dbDirective/css/dbDirective.css
+++ b/petljadoc/runestone_ext/dbDirective/css/dbDirective.css
@@ -131,5 +131,10 @@
     -webkit-user-select:none;
     -moz-user-select:none;
     -ms-user-select:none;
-    user-select:none
+    user-select:none;
+    margin-bottom: 10px;
    }
+
+.db-input .row :nth-child(4){
+    margin-left: 20px
+}
