--- a/petljadoc/themes/course_theme/static/petlja-course.css
+++ b/petljadoc/themes/course_theme/static/petlja-course.css
@@ -209,32 +209,6 @@ ul:first-child {
 		max-width: 100%;
 	}
 }
-.lecture-div {
-	font-size: 18px;
-	font-weight: 700;
-	cursor: pointer;
-	position: relative;
-	padding: 6px 10px 6px 10px;
-	user-select: none;
-}
-
-.lecture-div h5 {
-	margin: 0 0 0 15px !important;
-    font-size: 18px;
-}
-
-.lecture-div i {
-	position: absolute;
-    top: 6px;
-    left: 5px;
-    font-size: 21px;
-}
-
-.lecture-div:hover {
-	text-shadow: 0 0 3px;
-}
-
-
 .activity-div {
 	width: 100%;
 	padding-left: 20px;
@@ -257,29 +231,6 @@ ul:first-child {
 
 .activity-div:hover {
 	text-shadow: 0 0 3px;
-}
-
-#main-content::before {
-	display: none !important;
-}
-#main-content {
-	width: 80vw !important;
-	max-width: none !important;
-	margin-top: 65px;
-}
-
-#main-content > div:nth-of-type(2) {
-	max-width: 780px;
-	height: max-content;
-	padding-bottom: 60px;
-	margin:auto;
-}
-
-#main-content > section {
-	max-width: 780px;
-	height: max-content;
-	padding-bottom: 60px;
-	margin:auto;
 }
 
 .lecture-switcher {
@@ -362,3 +313,766 @@ ul:first-child {
 	opacity: 0.90;
 	z-index: 1;
 }
+
+.content-header {
+    height: 65px;
+    background: #f7f8fa;
+    padding: 0 20px;
+    box-shadow: 0 1px 3px 0 rgba(0,0,0,.15);
+    text-align: center;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    border-bottom: 1px solid #dedfe0
+}
+
+.content-header h3 {
+    float: right;
+    font-size: 24px;
+    margin-right: 28vw;
+    margin-top: 5px;
+    color: #fff
+}
+
+.content-header-label:hover{
+	text-decoration: underline;
+	cursor: pointer;
+}
+
+.content-header-label {
+	font-size: 18px;
+	font-weight: 600;
+	color: #333;
+	position: relative;
+	min-width: 300px;
+	margin: auto;
+	width: 50%;
+}
+
+.content-header label {
+    font-weight: 600;
+    color: #333;
+    cursor: pointer
+}
+
+.content-header label>span {
+    cursor: pointer;
+    margin-right: 5px
+}
+
+.body{
+	margin: 0 auto;
+    height: 100vh;
+    font-family: 'Source Sans Pro';
+    font-size: 16px;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    text-align: left;
+    background-color: #fff;
+}
+
+.petljaCourseContainer {
+    width: 100%;
+    height: calc(100vh - 65px);
+    position: relative
+}
+
+.petljaCourseContent {
+    float: left;
+    height: calc(100vh - 135px);
+    width: 20%;
+    overflow-y: scroll;
+    scroll-behavior: smooth;
+    position: relative;
+    left: 0;
+    transition: 1s;
+    overflow: auto;
+    color: #fff !important;
+    padding: 14px 0 0;
+    background-color: #f7f8fa;
+    color: #333
+}
+
+
+.lectureContent {
+    width: calc(80% - 60px);
+    height: calc(100vh - 68px);
+    float: left;
+    position: relative
+}
+
+.lectureContentMaterial {
+    padding-right: 35px;
+    padding-top: 15px;
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden
+}
+
+.lectureContentMaterial p,.lectureContentMaterial a,.lectureContentMaterial div,.lectureContentMaterial section {
+    max-width: 780px;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 16px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.38;
+    letter-spacing: normal;
+    color: #666
+}
+
+.lectureContentMaterial a {
+    color: #18bc9c
+}
+
+.lectureContentMaterial h1,.lectureContentMaterial h2,.lectureContentMaterial h3,.lectureContentMaterial h4,.lectureContentMaterial h5,.lectureContentMaterial h6 {
+    max-width: 780px;
+    margin-left: auto;
+    margin-right: auto;
+    color: #333;
+    font-weight: 600
+}
+
+.lectureToolbox {
+    width: 60px;
+    height: calc(100vh - 68px);
+    float: left;
+    position: relative;
+    background-color: #f7f8fa
+}
+
+.font-size-toggle {
+    padding-top: 10px;
+    color: #666;
+    text-align: center;
+    width: 100%;
+    cursor: pointer
+}
+
+.font-size-toggle i {
+    font-size: 32px;
+    width: 100%
+}
+
+.font-size-toggle label {
+    font-size: 12px;
+    color: #666
+}
+
+.font-size-toggle:hover {
+    background-color: #e8e8e8;
+    border-right: 2px solid #18bc9c
+}
+
+
+.lecture-prev-next-toggle {
+    height: 100px;
+    width: 100%;
+    position: relative;
+    /*bottom: 100px;  because there is no need to make space for finish-box*/
+    z-index: 1
+}
+.lecture-toggler-arrows {
+    text-align: center;
+    cursor: pointer;
+    color: #fff;
+    padding: 2px 10px;
+    height: 40px;
+    width: 180px;
+    margin-top: 5px;
+    margin-left: 30%;
+    float: left;
+    border: 1px solid #fff;
+    border-radius: 10px;
+    font-size: 14px !important;
+    font-weight: 600 !important;
+    line-height: 1.57 !important;
+    text-align: left !important;
+    color: #333 !important
+}
+#nextLectureLink{
+	float: right;
+}
+
+.tableOfContent {
+    padding-left: 20px;
+    overflow: hidden;
+    color: #333;
+    border-bottom: 1px solid #dedfe0;
+    min-height: 60px;
+    padding: 20px 107px 20px 21px
+}
+
+.tableOfContent h5 {
+    font-size: 16px;
+    font-weight: 600;
+    text-align: left;
+    color: #333
+}
+
+
+.courseContentToggle {
+    width: 22px;
+    position: absolute;
+    top: 35px;
+    right: 17px;
+    z-index: 100;
+    transition: 1s;
+    cursor: pointer
+}
+
+.courseContentToggle i {
+    color: #333
+}
+
+.lecture-toggler-arrows{
+	width: max-content;
+}
+
+.course-logo-nav {
+    float: left;
+    width: 60px;
+    height: 50px;
+    margin-left: 10px
+}
+
+.course-logo-nav img {
+    width: 55px;
+    margin-top: 15px;
+    height: auto;
+    object-fit: contain
+}
+
+.course-logo-nav-kabinet {
+    float: left;
+    width: 45px;
+    height: 50px;
+    margin-left: 15px;
+    padding-left: 15px;
+    padding-bottom: 5px;
+    margin-top: 15px
+}
+
+.course-logo-nav-kabinet img {
+    width: 20px;
+    margin-top: 3px
+}
+
+.useful-links-toggle {
+    float: right;
+    height: 50px;
+    width: 50px;
+    margin-right: 20px;
+    margin-top: 10px;
+    cursor: pointer;
+    color: #fff;
+    position: relative
+}
+
+.links-title {
+	padding-left:10px;
+	border-bottom:#5ed1ba solid 1px;
+	font-size:16px;
+	font-weight:700
+   }
+
+.dropdown-toggle-burger {
+    color: #fff !important
+}
+
+.useful-links {
+    position: absolute;
+    right: 15px;
+    margin-top: 5px;
+    display: none;
+    min-width: 100px;
+    z-index: 1000;
+    background-color: #18bc9c
+}
+
+.useful-links span {
+    font-size: 16px;
+    font-weight: 700;
+    margin-left: 10px;
+    cursor: default;
+    border-bottom: 1px solid #000
+}
+
+.useful-link {
+    min-width: 150px;
+    padding: 10px 0 5px 15px;
+    border-bottom: #5ed1ba solid 1px;
+    cursor: pointer
+}
+
+.useful-link a {
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    font-size: 16px
+}
+
+.useful-link:hover {
+    background-color: #343a40
+}
+
+.useful-link:hover a {
+    color: #18bc9c !important;
+    text-decoration: none
+}
+
+.left-side-nav {
+    overflow: hidden;
+    float: left
+}
+
+.right-side-nav {
+    max-height: 65px;
+    float: right
+}
+
+#usefulLinksClose {
+    position: absolute;
+    right: -5px;
+    top: -5px;
+    font-size: 14px;
+    width: 16px;
+    cursor: pointer
+}
+
+#usefulLinksClose:hover {
+    color: #18bc9c;
+    font-weight: 700
+}
+
+.courseContentsSection {
+	position:relative;
+	cursor:pointer
+   }
+
+   .courseContentsSectionHeadline {
+	color:#333 !important;
+	min-height:60px;
+	border-bottom:1px solid #dedfe0;
+	padding:10px 27px 10px 21px
+   }
+   .courseContentsSectionHeadline:hover {
+	color:#333 !important;
+	font-weight:700;
+	background-color:#f0f1f3
+   }
+   .courseContentsSectionHeadline h5 {
+	color:#333 !important;
+	font-weight:600;
+	font-size:16px
+   }
+   .courseContentsSectionHeadline:hover h5 {
+	color:#333 !important;
+	font-weight:700
+   }
+   .courseContentsSection h5 {
+	font-size:18px;
+	-moz-user-select: -moz-none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+   }
+   .courseContentsSubSection {
+	border-bottom:1px solid #dedfe0
+   }
+   .courseContentsSubSection div {
+	width:100%;
+	padding-left:20px;
+	padding-top:3px;
+	padding-bottom:7px;
+	font-size:16px;
+	line-break:auto;
+	vertical-align:middle
+   }
+   .studioLecture {
+	background-color:#fff;
+	color:#333;
+	font-size:14px;
+	font-weight:600;
+	padding:20px 20px 20px 21px !important
+   }
+   .studioLecture.active {
+	color:#333;
+	background-color:rgba(24,188,156,.1)
+   }
+   .studioLecture:hover {
+	background-color:#f0f1f3
+   }
+   .courseContentsSubSection img {
+	margin-bottom:3px
+   }
+   .courseContentsSubSection div:hover {
+	font-weight:700
+   }
+   .courseContentsSubSection.active {
+	display:block
+   }
+   .caret-position {
+	position:absolute;
+	top:19px;
+	right:24px;
+	font-size:21px
+   }
+   .fas.fa-caret-down.angle-position {
+	display:block
+   }
+
+   .activity-icon {
+	width:16px;
+	margin-left:6px;
+	margin-right:2px;
+	text-align:center;
+	float:right
+   }
+   .course-description {
+	background-color:#1f1e1d;
+	color:#fff;
+	width:100%;
+	overflow:hidden;
+	font-family:'Source Sans Pro'
+   }
+   .course-shortdescription {
+	float:left;
+	width:40%;
+	padding-top:60px;
+	margin-left:22%;
+	overflow:hidden
+   }
+   .course-description-additionalinfo {
+	font-size:15px;
+	font-weight:normal;
+	font-stretch:normal;
+	font-style:normal;
+	line-height:24px;
+	letter-spacing:normal;
+	text-align:left;
+	color:#fff;
+   }
+   .course-description-additionalinfo p {
+	color:#fff
+   }
+   .course-shortdescription h1 {
+	color:#fff !important;
+	margin-bottom:10px
+   }
+   .course-shortdescription h2 {
+	color:#fff !important;
+	margin-bottom:10px;
+	font-size:36px;
+	font-weight:600;
+	font-stretch:normal;
+	font-style:normal;
+	line-height:normal;
+	letter-spacing:normal;
+	text-align:left;
+	color:#fff
+   }
+   .course-textdescription {
+	float:left;
+	width:100%
+   }
+   .course-info {
+	position:absolute;
+	left:65.5%;
+	top:180px;
+	width:360px;
+	background-color:#fff !important;
+	color:#000;
+	border:1px solid #d3d3d3;
+	box-shadow:0 3px 6px 0 rgba(0,0,0,.25);
+	padding-bottom: 10px;
+   }
+   .course-startinfo {
+	background-color:#b3fff0;
+	color:#000;
+	width:100%;
+	height:35px;
+	margin-top:50px;
+	padding:5px 5px 10px 15px
+   }
+   .course-startinfo i {
+	margin-right:10px
+   }
+   .course-start {
+	width: 70%;
+	height: 50px;
+	color: #fff;
+	text-align: center;
+	padding-top: 15px;
+	margin: 0 auto;
+	margin-top: 35px;
+	background-color: #18bc9c;
+	border-radius: 4px;
+	cursor: pointer;
+	display: block;
+  }
+   .course-start:hover {
+	background-color:#008a6f
+   }
+   .all-instance-items {
+	float:left;
+	border:1px solid #fff;
+	margin-bottom:5px
+   }
+
+   .studio-course-content {
+	overflow:hidden;
+	margin-top:35px;
+	color:#18bc9c !important;
+	max-width:80%;
+	margin-left:14%
+   }
+   .homepage-content h1,
+   .homepage-content h2,
+   .homepage-content h3,
+   .homepage-content p {
+	color:#18bc9c
+   }
+   .studio-course-content a {
+	font-weight:700;
+	font-style:italic
+   }
+   .see-more-reqs {
+	font-size:14px;
+	font-weight:600;
+	font-stretch:normal;
+	font-style:normal;
+	line-height:1.57;
+	letter-spacing:normal;
+	text-align:left;
+	color:#18bc9c;
+	cursor:pointer
+   }
+   .see-less-reqs {
+	font-size:14px;
+	font-weight:600;
+	font-stretch:normal;
+	font-style:normal;
+	line-height:1.57;
+	letter-spacing:normal;
+	text-align:left;
+	color:#18bc9c;
+	cursor:pointer;
+	display:none
+   }
+   .course-requirements {
+	float:left;
+	width:50%;
+	margin-top:15px;
+	color:#666;
+	margin-left:10%
+   }
+   .course-requirements div:first-child {
+	float:left;
+	position:relative;
+	border-radius:10px;
+	border:solid 1px #dcdacb;
+	background-color:#fbfbf9;
+	padding:30px 88px 30px 40px;
+	width:100%
+   }
+   .course-requirements div:first-child>ul {
+	max-height:240px;
+	overflow:hidden
+   }
+   .course-requirements div:nth-child(2) {
+	float:left;
+	max-height:300px;
+	overflow:hidden;
+	width:100%;
+	position:relative;
+	margin-top:30px
+   }
+   .course-requirements div:nth-child(2)>ul>li {
+	width:100%;
+	margin-top:10px;
+	margin-bottom:5px
+   }
+   .course-requirements h3 {
+	font-size:24px;
+	font-weight:600;
+	font-stretch:normal;
+	font-style:normal;
+	line-height:normal;
+	letter-spacing:normal;
+	text-align:left;
+	color:#333
+   }
+   .course-requirements ul {
+	margin-left:-20px
+   }
+   .course-requirements li {
+	color:#666;
+	font-size:16px;
+	font-weight:600;
+	font-stretch:normal;
+	font-style:normal;
+	line-height:1.38;
+	letter-spacing:normal;
+	text-align:left;
+	width:45%;
+	height:max-content;
+	margin:20px 20px 20px 0;
+	float:left
+   }
+   .course-tableofcontent {
+	color:#18bc9c;
+	width:50%;
+	float:left;
+	margin-left:10%;
+	margin-top:25px
+   }
+   .course-tableofcontent-instance {
+	margin-top:215px !important
+   }
+   .course-tableofcontent h3 {
+	font-size:24px;
+	font-weight:600;
+	font-stretch:normal;
+	font-style:normal;
+	line-height:normal;
+	letter-spacing:normal;
+	text-align:left;
+	color:#333
+   }
+   .course-tableofcontent div {
+	border:solid 1px #dcdacb;
+	border-bottom:none;
+	background-color:#fbfbf9;
+	padding:20px 1px 19px 20px;
+	font-size:16px;
+	font-weight:normal;
+	font-stretch:normal;
+	font-style:normal;
+	line-height:normal;
+	letter-spacing:normal;
+	text-align:left;
+	color:#333;
+	width:100%
+   }
+   .course-tableofcontent div:nth-child(2) {
+	border-top-left-radius:10px;
+	border-top-right-radius:10px;
+	margin-top:30px
+   }
+   .course-tableofcontent div:last-child {
+	border-bottom-left-radius:10px;
+	border-bottom-right-radius:10px;
+	border-bottom:solid 1px #dcdacb
+   }
+   .course-tableofcontent div>label {
+	max-width:calc(100% - 200px)
+   }
+   .course-tableofcontent div>span {
+	float:right;
+	width:90px;
+	min-height:1px
+   }
+   .course-logo {
+	width:100%;
+	height:340px;
+	text-align:center;
+	background-color:#f7f6f4
+   }
+   .course-logo-img {
+	margin:0 auto;
+	width:320px;
+	height:320px;
+	margin-top:10px
+   }
+   .description-span {
+	margin-right:10px
+   }
+   .description-span i {
+	font-size:12px
+   }
+   .course-descrptionpoints-full {
+	width:100%;
+	height:50px;
+	float:left;
+	margin-top:15px
+   }
+   .course-descrptionpoints {
+	width:33%;
+	height:50px;
+	float:left;
+	margin-top:15px
+   }
+   .course-descrptionpoints-right {
+	width:40%;
+	height:50px;
+	float:right;
+	margin-top:15px
+   }
+   .course-descrptionpoints i {
+	margin-right:6px
+   }
+   .course-progress {
+	width:100%;
+	height:200px;
+	float:left;
+	margin-top:35px;
+	overflow:hidden
+   }
+   .course-progress i {
+	float:left;
+	margin-right:45px;
+	margin:20px;
+	color:#18bc9c;
+	border-radius:40px
+   }
+   .finished-course-trophy {
+	box-shadow:0 0 20px #18bc9c
+   }
+   .course-progressbar {
+	width:200px;
+	margin-top:50px;
+	background-color:#fff;
+	border:1px solid #18bc9c;
+	border-radius:15px;
+	float:left;
+	height:25px;
+	color:#000;
+	text-align:center
+   }
+   .course-progressbar-div {
+	height:100%;
+	background-color:#18bc9c;
+	border-radius:50px;
+	text-align:center
+   }
+   .course-logo-nav {
+	float:left;
+	width:60px;
+	height:50px;
+	margin-left:10px
+   }
+   .course-logo-nav img {
+	width:55px;
+	margin-top:15px;
+	height:auto;
+	object-fit:contain
+   }
+   .course-logo-nav-kabinet {
+	float:left;
+	width:45px;
+	height:50px;
+	margin-left:15px;
+	padding-left:15px;
+	padding-bottom:5px;
+	margin-top:15px
+   }
+   .course-logo-nav-kabinet img {
+	width:20px;
+	margin-top:3px
+   }
