--- a/petljadoc/runestone_ext/associations/css/associations.css
+++ b/petljadoc/runestone_ext/associations/css/associations.css
@@ -1,23 +1,68 @@
+.asc{
+    width: 100%;
+    height:  auto;
+    overflow: hidden;
+    border: 2px solid transparent;
+    margin:20px 0 20px 0;
+}
+
 .asc-clue{
-    width: 250px;
+    width: 100%;
     height: 25px;
     margin:auto;
     margin-bottom: 10px;
-    background-color: aquamarine;
     text-align: center;
+    font-size: 22px !important;
+    border-radius: 7px;
+    color:white !important;
+    line-height: 25px !important;
 }
 
+.asc-group:nth-child(1) .asc-clue{
+    background-color:#C4C8E9;
+}
+
+.asc-group:nth-child(2) .asc-clue{
+    background-color: #A96DA3;
+}
+
+.asc-group:nth-child(3) .asc-clue{
+    background-color: #7A5980;
+}
+
+.asc-group:nth-child(4) .asc-clue{
+    background-color: #3B3B58;
+}
+.asc-group:nth-child(1) .correct-msg{
+    color:#C4C8E9;
+}
+
+.asc-group:nth-child(2) .correct-msg{
+    color: #A96DA3;
+}
+
+.asc-group:nth-child(3)  .correct-msg{
+    color: #7A5980;
+}
+
+.asc-group:nth-child(4)  .correct-msg{
+    color: #3B3B58;
+}
 .asc-input{
-    width: 250px;
-    margin-left:10px;
+    width: 100%;
     margin-bottom: 15px;
+    text-align: center;
 }
 .asc-test-answer{
-    width: 250px;
+    width: 100%;
     height: 25px;
     margin:auto;
-    background-color: aquamarine;
+    background-color: #1CD9B3;
     text-align: center;
+    font-size: 22px !important;;
+    border-radius: 7px;
+    color: white !important;
+    line-height: 25px !important;
 }
 .asc-test-answer:hover{
     cursor: pointer;
@@ -25,19 +70,21 @@
 .correct-msg{
     text-align: center;
     height: 60px;
-    width: 270px;
+    width: 100%;
     display: none;
     position: relative;
     top: 20px;
+    font-size: 22px !important;
 }
 
 .correct-msg-final{
     text-align: center;
     width: 100%;
+    font-size: 30px !important;
 }
 
 .asc-group{
-    width: 270px;
+    width: 46%;
     padding: 10px;
     position: relative;
     float: left;
@@ -45,29 +92,43 @@
     margin-bottom: 4px;
 }
 
-.asc{
-    width: 600px;
-    height:  auto;
-    overflow: hidden;
-    padding: 10px;
-    border: 2px solid transparent;
-}
-
-.odgovor{
+.answer{
     margin-top:25px;
-    width: 600px;
+    width: 100%;
     position: relative;
     float: left;
+    font-size: 22px !important;
 }
-.odgovor input{
-    width: 300px;
-    margin-left:150px;
-}
-.asc-final-test-answer{
-    width: 300px;
+.answer input{
+    width: 50%;
+    margin-left: 25%;   
     height: 25px;
-    margin-left:150px;
-    margin-top:10px;
-    background-color: aquamarine;
     text-align: center;
 }
+.asc-final-test-answer{
+    width: 50%;
+    margin-left: 25%;
+    height: 25px;
+    margin-top:10px;
+    background-color: #1CD9B3;
+    text-align: center;
+    border-radius: 7px;
+    color: white !important;
+    line-height: 25px !important;
+    font-size: 22px !important;
+}
+
+.correct-msg-final i{
+    color: #1CD9B3;
+}
+
+.error-border{
+    border:2px solid red;
+}
+
+@media only screen and (max-width: 700px) {
+    .asc-group{
+        width: 80%;
+        margin-left: 10%;
+    }
+  }
