--- a/petljadoc/runestone_ext/associations/css/associations.css
+++ b/petljadoc/runestone_ext/associations/css/associations.css
@@ -3,7 +3,8 @@
     height:  auto;
     overflow: hidden;
     border: 2px solid transparent;
-    margin:20px 0 20px 0;
+    box-shadow: 0 2px 5px 0;
+    padding: 10px 0 10px 0;
 }
 
 .asc-clue{
@@ -16,6 +17,10 @@
     border-radius: 7px;
     color:white !important;
     line-height: 25px !important;
+}
+
+.asc-clue:hover{
+    cursor: pointer;
 }
 
 .asc-group:nth-child(1) .asc-clue{
@@ -59,10 +64,10 @@
     margin:auto;
     background-color: #1CD9B3;
     text-align: center;
-    font-size: 22px !important;;
+    font-size: 20px !important;;
     border-radius: 7px;
     color: white !important;
-    line-height: 25px !important;
+    line-height: 20px !important;
 }
 .asc-test-answer:hover{
     cursor: pointer;
@@ -84,16 +89,21 @@
 }
 
 .asc-group{
-    width: 46%;
+    width: 48%;
     padding: 10px;
     position: relative;
-    float: left;
     margin-right: 4px;
     margin-bottom: 4px;
 }
+.asc-group:nth-child(2n+1){
+    float: left;
+}
+.asc-group:nth-child(2n){
+    float: right;
+}
 
 .answer{
-    margin-top:25px;
+    margin-top:15px;
     width: 100%;
     position: relative;
     float: left;
@@ -118,7 +128,12 @@
     font-size: 22px !important;
 }
 
-.correct-msg-final i{
+.correct-msg-final{
+    color: #1CD9B3 !important;
+}
+
+.correct-msg-final svg{
+    transform: scale(1.7);
     color: #1CD9B3;
 }
 
@@ -128,7 +143,24 @@
 
 @media only screen and (max-width: 700px) {
     .asc-group{
-        width: 80%;
-        margin-left: 10%;
+        width: 100%;
+    }
+    .answer input{
+        width: 90%;
+        margin-left: 5%;   
+        height: 25px;
+        text-align: center;
+    }
+    .asc-final-test-answer{
+        width: 90%;
+        margin-left: 5%;   
+        height: 25px;
+        margin-top:10px;
+        background-color: #1CD9B3;
+        text-align: center;
+        border-radius: 7px;
+        color: white !important;
+        line-height: 25px !important;
+        font-size: 22px !important;
     }
   }
