--- a/petljadoc/runestone_ext/associations/css/associations.css
+++ b/petljadoc/runestone_ext/associations/css/associations.css
@@ -5,6 +5,7 @@
     border: 2px solid transparent;
     box-shadow: 0 2px 5px 0;
     padding: 10px 0 10px 0;
+    margin-bottom: 10px;
 }
 
 .asc-clue{
