--- a/petljadoc/runestone_ext/regexcheck/css/regex-check.css
+++ b/petljadoc/runestone_ext/regexcheck/css/regex-check.css
@@ -1,3 +1,8 @@
+.regex-check{
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
 .blue{
     background-color: lightblue;
     margin-left: 2px;
@@ -5,25 +10,57 @@
 }
 
 .regex-input{
-    width: 500px;
-    height: 50px;
-    margin-bottom: 50px;
+    border: 1px solid black;
+    border-radius: 3px;
+    box-sizing: border-box;
+    font-family: inherit;
+    font-size: 19px;
+    line-height: 19px;
+    outline: 0;
+    padding: 10px 10px 0px;
+    width: 100%;
+    resize: none;
+    height: 40px;
 }
 .regex-text{
     width: 500px;
     position:absolute;
     top:0%;
     height: 300px;
-     z-index: 1
-     ;pointer-events: none;
+    z-index: 1;
+    pointer-events: none;
 }
-.text-wrapper{
+.editor-wrapper{
     position: relative;
 }
 .hidden-ta{
-    width: 500px;
-    height: 300px;
     z-index: 2;
     color:transparent;
     background-color: transparent;
+    border: 1px solid black;
+    border-radius: 3px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
+    font-family: inherit;
+    font-size: 20px;
+    line-height: 20px;
+    outline: 0;
+    padding: 10px 0px;
+    width: 100%;
+    height: 500px;
+    resize: none;
+}
+
+.title{
+    border-bottom: 1px solid #344f71;
+    color: #344f71;
+    font-weight: 600;
+    margin: 0 0 7px;
+    padding: 0 0 4px;
+    text-transform: uppercase;
+}
+
+.test-text{
+    margin-top: 20px;
 }
