--- a/petljadoc/runestone_ext/regexcheck/css/regex-check.css
+++ b/petljadoc/runestone_ext/regexcheck/css/regex-check.css
@@ -1,6 +1,7 @@
 .regex-check{
     margin-top: 10px;
     margin-bottom: 10px;
+    width: 100%;
 }
 
 .blue:nth-child(2n+1){
@@ -25,12 +26,12 @@
     height: 40px;
 }
 
-.editor-wrapper{
+.test-text{
     position: relative;
 }
 
 .regex-text{
-    width: 100%;
+    width: calc(100% - 4px);
     position:absolute;
     top:0%;
     height: 500px;
@@ -38,7 +39,9 @@
     font-family: inherit;
     font-size: 20px;
     line-height: 20px;
-    padding: 10px 0px 0px 10px;
+    word-wrap: break-word;
+    padding-left: 4px;
+    padding-top: 5px;
 }
 
 .regex-text span{
@@ -58,7 +61,6 @@
     font-size: 20px;
     line-height: 20px;
     outline: 0;
-    padding: 10px 0px 0px 10px;
     width: 100%;
     height: 500px;
     resize: none;
@@ -79,7 +81,7 @@
     text-transform: uppercase;
 }
 
-.test-text{
+.editor-wrapper{
     margin-top: 20px;
 }
 
