--- a/petljadoc/runestone_ext/editor/css/editor.css
+++ b/petljadoc/runestone_ext/editor/css/editor.css
@@ -4,7 +4,6 @@
 }
 
 .petlja-editor .CodeMirror {
-    margin-top: 3px;
     width: 100%;
 }
 
@@ -13,7 +12,7 @@
     height: 318px;
     padding-top: 10px;
     width: calc(50% - 3px);
-    margin-right: 3px;
+    margin-right: 3px !important;
 }
 
 .editor-container label {
@@ -22,14 +21,16 @@
     border-top-left-radius: 5px;
     padding: 5px 10px;
     color: #fff;
+    margin-bottom: 0px !important;
 }
 
 .editor-iframe {
-    width: calc(49% - 3px); 
-    height: 297px; 
-    margin-top: 31px;
-    float: left; 
-    visibility: hidden;
+    width: calc(50% - 3px);
+    height: 275px;
+    margin-top: 42px;
+    float: left;
+    display: none;
+    margin-bottom: 15px;
 }
 
 .editor-play {
@@ -37,10 +38,15 @@
     background-color: #18bc9c;
     color: white;
     float: left;
-    margin-right: 10px;
+    margin-right: 10px !important;
     margin-top: 10px;
     width: calc(50% - 15px);
     text-align: center;
     border-radius: 5px;
     cursor: pointer;
+}
+
+.editor-btn{
+    width: 100%;
+    float:left;
 }
