--- a/petljadoc/runestone_ext/editor/css/editor.css
+++ b/petljadoc/runestone_ext/editor/css/editor.css
@@ -10,12 +10,12 @@
 .editor-container {
     float: left;
     height: 318px;
-    padding-top: 10px;
-    width: calc(50% - 3px);
+    padding-top: 0px;
+    width: 100%;
     margin-right: 3px !important;
 }
 
-.editor-container label {
+.editor-container label, .title-tab label {
     background-color: #3d3d3d;
     border-top-right-radius: 5px;
     border-top-left-radius: 5px;
@@ -34,19 +34,53 @@
 }
 
 .editor-play {
-    padding: 3px 7px;
-    background-color: #18bc9c;
-    color: white;
-    float: left;
-    margin-right: 10px !important;
-    margin-top: 10px;
-    width: calc(50% - 15px);
-    text-align: center;
-    border-radius: 5px;
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
+    padding: 5px 10px;
+    color: #fff !important;
+    margin-bottom: 0px !important;
+    margin-right: 5px;
     cursor: pointer;
+    float: right;
+    background-color: #18bc9c;
+    border-bottom: 2px solid #18bc9c !important;
+    font-size: 18px !important;
 }
 
 .editor-btn{
     width: 100%;
     float:left;
 }
+
+.editor-title {
+    margin-right: 5px !important;
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
+    padding: 5px 10px;
+    color: #fff !important;
+    margin-bottom: 0px !important;
+    margin-right: 5px;
+    cursor: pointer;
+    float: left;
+    background-color: #3d3d3d;
+    border-bottom: 2px solid #666 !important;
+    font-size: 18px !important;
+}
+
+.editor-title:hover {
+    background-color: #3d3d3daa;
+}
+
+.editor-title.active {
+    background-color: #18bc9c;
+    cursor: default;
+    border-bottom: 2px solid #18bc9c !important;
+    font-size: 18px;
+    
+}
+
+.editor-title.active:hover {
+    background-color: #18bc9c;
+}
+
+
