--- a/petljadoc/themes/course_theme/static/petlja-course.css
+++ b/petljadoc/themes/course_theme/static/petlja-course.css
@@ -265,6 +265,46 @@ ul:first-child {
 	margin-bottom: 10px;
 }
 
+.quiz-question .dragndrop-question,
+.quiz-question .parsons-question,
+.quiz-question .petlja-problem-box-icon-holder {
+	background-color: #D9F2ED !important;
+}
+
+.quiz-image {
+    left: calc(50% - 14px);
+    top: -26px;
+    width: 31px;
+}
+
+@media (max-width: 600px) {
+    .quiz-image {
+        left: calc(50% - 13px);
+        top: -32px;
+        width: 27px;
+        height: 45px;
+    }
+    
+}
+
+.petlja-problem-image-quiz {
+	display: none;
+    position: absolute !important;
+}
+
+.quiz-question .petlja-problem-image-quiz {
+	display: block;
+}
+
+.quiz-question .petlja-problem-image {
+	display: none;
+}
+
+.quiz-question .image-background {
+	filter: invert(72%) sepia(26%) saturate(7495%) hue-rotate(124deg) brightness(91%) contrast(83%);
+}
+
+
 @media only screen and (max-width: 900px) {
 	.course-content {
 		padding: 5px;
