--- a/petljadoc/runestone_ext/blockly/css/karelBlockly.css
+++ b/petljadoc/runestone_ext/blockly/css/karelBlockly.css
@@ -65,5 +65,24 @@
     height: auto;
     overflow: hidden;
 }
+.karel-blockly-wrapper{
+    flex-shrink: 0;
+    padding-top: 15px;
+    height: auto;
+    width: 1000px;
+    min-height: 580px;
+    max-width:none !important;
+} 
+@media only screen and (max-width: 1000px) {
+    .karel-blockly-wrapper{
+        width: 100%;
+    }
+  }
 
+.run-karel{
+    width: auto !important;
+}
 
+.reset-karel{
+    margin-bottom: 4px;
+}
