--- a/petljadoc/runestone_ext/blockly/css/karelBlockly.css
+++ b/petljadoc/runestone_ext/blockly/css/karelBlockly.css
@@ -65,5 +65,45 @@
     height: auto;
     overflow: hidden;
 }
+.karel-blockly-wrapper{
+    flex-shrink: 0;
+    padding-top: 15px;
+    height: auto;
+    width: 1000px;
+    min-height: 580px;
+    max-width:none !important;
+} 
 
+.run-karel{
+    width: auto !important;
+}
 
+.reset-karel{
+    margin-bottom: 4px;
+}
+
+.karel-ui{
+    width: 35%;
+    float: left;
+    top: -6px;
+    position: relative;
+}
+.blockly-ui{
+    width: 65%;
+    float: left;
+}
+
+@media only screen and (max-width: 1325px) {
+    .karel-blockly-wrapper{
+        width: 100%;
+    }
+    .karel-ui{
+        width: 100%;
+        float: left;
+    }
+    .blockly-ui{
+        width: 100%;
+        float: left;
+    }
+    
+  }
