Content web app

--- a/petljadoc/themes/bc_theme/static/petlja-course.css
+++ b/petljadoc/themes/bc_theme/static/petlja-course.css
@@ -1229,8 +1229,20 @@ ul:first-child {
     margin: 5px;
 }
 
-#finish-activity{
-    margin-left: calc(50% - 50px);
+.finished-activity{
+	margin-left: calc(50% - 50px);
+    width: 100px;
+    height: 100px;
+    border-radius: 50px;
+    cursor: pointer;
+    font-size: 25px;
+    border: 1px solid #18bc9c;
+	color: white;
+	background-color: #18bc9c;
+}
+
+.unfinished-activity{
+	margin-left: calc(50% - 50px);
     width: 100px;
     height: 100px;
     border-radius: 50px;
@@ -1242,8 +1254,7 @@ ul:first-child {
 }
 
 #finish-activity:focus{
-	color: white;
-    background-color: #18bc9c;
+	outline: none;
 }
 
 .dec-letter-icon {
