--- a/petljadoc/themes/bc_theme/static/petlja-course.css
+++ b/petljadoc/themes/bc_theme/static/petlja-course.css
@@ -3,8 +3,8 @@ html {
 	position: relative;
 	max-height: 100vh;
 	width: 100vw;
-	overflow:auto;
-	overflow-x: hidden;
+	height: auto;
+	overflow: hidden;
 }
 
 .modal-body {
